cargo-features = ["panic-immediate-abort"]

[package]
name = "pebble-weather-graph-async"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
# pebble-sys = { git = "https://github.com/Peatral/pebble-rust", version = "0.1.0", default-features = false }
# pebble-sys = { path = "../pebble-rust/pebble-sys", version = "0.1.0", default-features = false }

[build-dependencies]
bindgen = "0.72.1"
doxygen-bindgen = "0.1.3"
doxygen-rs = "0.4.2"
# pebble-build = { git = "https://github.com/Peatral/pebble-rust", version = "0.1.0", default-features = false }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'thin' # true/fat breaks defmt?
opt-level = 's'
overflow-checks = true
# panic = 'unwind'
# panic = 'immediate-abort'
panic = 'abort'

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
panic = 'abort'
# panic = 'immediate-abort'

[features]
default = ["logging"]
logging = []

[dependencies]
embassy-executor = { version = "0.10.0", default-features = false, features = ["nightly", "embassy-time-driver"] }
embassy-time-driver = { version = "0.2.2" }
embassy-time-queue-utils = "0.3.2"
embassy-time = { version = "0.5.1", features = ["tick-hz-1_000"] }
embassy-sync = "0.8.0"
embassy-futures = "0.1.2"
heapless = { version = "0.9.3", features = ["ufmt"] }
higher-kinded-types = "0.3.0"
ufmt = { version = "0.2.0", default-features = false }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor-timer-queue = { git = "https://github.com/embassy-rs/embassy" }
